# UAP-Machine-Learning

./: .gitattributes  .gitignore  .pdm-python  Modeluap.ipynb  README.md  app.py  pyproject.toml  requirements.txt  style.css
models/: cnn_weights.weights.h5  mobilenet_weights.weights.h5  resnet_weights.weights.h5
utils/: predict.py  preprocess.py
